Add malloc/free support to MemSegBuffer